--- a/andfactory-iOS-kadai/SearchUser/View/SearchUser.storyboard
+++ b/andfactory-iOS-kadai/SearchUser/View/SearchUser.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ovq-WV-x7p">
+                            <searchBar contentMode="redraw" placeholder="ユーザー名で検索" translatesAutoresizingMaskIntoConstraints="NO" id="ovq-WV-x7p">
                                 <rect key="frame" x="0.0" y="88" width="414" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -31,12 +31,21 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="7cE-OH-HXu"/>
                                 </connections>
                             </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="MNI-hJ-uZk">
+                                <rect key="frame" x="182" y="289" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="0yk-82-6Ij"/>
+                                    <constraint firstAttribute="width" constant="50" id="3R9-i1-gKq"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="9KX-4B-Nvc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5ek-vb-xlz"/>
+                            <constraint firstItem="MNI-hJ-uZk" firstAttribute="top" secondItem="ovq-WV-x7p" secondAttribute="bottom" constant="150" id="AXj-kb-1O5"/>
                             <constraint firstItem="9KX-4B-Nvc" firstAttribute="top" secondItem="ovq-WV-x7p" secondAttribute="bottom" id="BL3-58-5Vo"/>
+                            <constraint firstItem="MNI-hJ-uZk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Q1h-Pu-NhU"/>
                             <constraint firstItem="ovq-WV-x7p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aY7-X9-uAi"/>
                             <constraint firstItem="ovq-WV-x7p" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bsa-Nx-7mt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9KX-4B-Nvc" secondAttribute="bottom" id="d5h-95-c0Z"/>
@@ -46,6 +55,7 @@
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="indicator" destination="MNI-hJ-uZk" id="G5d-1K-ZcZ"/>
                         <outlet property="searchBar" destination="ovq-WV-x7p" id="WLJ-AU-ZgO"/>
                         <outlet property="tableView" destination="9KX-4B-Nvc" id="kwi-Kq-J8O"/>
                     </connections>
