Revert "cell内のimageViewのbackgroundColorをDefaultに修正"
This reverts commit d6e323a1edb91fe3580c0bbff252b83978e2f315.

--- a/andfactory-iOS-kadai/View/UserCell.xib
+++ b/andfactory-iOS-kadai/View/UserCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,6 +22,7 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lke-YC-kE4">
                                 <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="K8T-FN-0iK"/>
                                     <constraint firstAttribute="width" secondItem="Lke-YC-kE4" secondAttribute="height" multiplier="1:1" id="hIk-Na-ehc"/>
@@ -63,4 +65,9 @@
             <point key="canvasLocation" x="62" y="99"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
